tdf#154282 - Prevent crash for LeftParaMargin and RightParaMargin

Prevent crash for LeftParaMargin and RightParaMargin by returning both
values for the hardcoded 0 in SfxDispatchController_Impl::StateChanged.

Change-Id: I7705bd5e22d6cd7fbbe702d7ddbf17e2899b851e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151472
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>